[package]
name = "zk-shielded-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
halo2-base = { version = "0.5.1", default-features = false, features = ["halo2-axiom", "display", "test-utils"] }
halo2-ecc = { version = "0.5.1", default-features = false, features = ["halo2-axiom"] }
pse-poseidon = { git = "https://github.com/axiom-crypto/pse-poseidon.git" }

rand = "0.8"
hex-literal = "1.1.0"
hex = "0.4.3"



# TODO: what are these? - do we need it
[profile.dev]
opt-level = 3
debug = 1
overflow-checks = true
incremental = true
